--- a/application-eureka01.yml
+++ b/application-eureka01.yml
@@ -1,19 +1,3 @@
-#集群服务1配置项开始
-server:
-  port: 10011 #集群服务1端口
-eureka:
-  server:
-    enable-self-preservation: false # 测试时关闭自我保护机制，保证不可用服务及时踢出
-  instance:
-    hostname: eureka01 #集群服务1主机名称，在hosts中配置了
-    instance-id: A01EurekaServerPJPlus-eureka01
-  client:
-    #    fetch-registry: false
-    #    register-with-eureka: false
-    service-url:
-      defaultZone: http://eureka02:10021/eureka,http://eureka03:10031/eureka #集群服务1需要注册进入集群服务2和集群服务3中
-#集群服务1配置项完毕
-#集群的spring.application.name需要一致
-spring:
-  application:
-    name: a01eurekaserverpjplus
+wqy:
+  name:
+    place: eureka01
